--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="bg-dark vh-100 text-light d-flex justify-content-center align-items-center">
     <img src="./assets/assets/images/SKILLHUB-48-48.png" alt="">
-    <h1>Skillhub Pro</h1>
+    <h1>Skillhub</h1>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
